--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
                 background-color: transparent;
                 margin-top: 4.4vw;
                 margin-right: 2vw;
-                padding: 1vw;
+                padding-left: 10%;
+                padding-right:10%;
+                padding-top:4%;
+                padding-bottom:4%;
                 display: block;
                 position: absolute;
                 font-size:3.5rem;
@@ -46,7 +49,7 @@
             .LinksMenu {
                 position: absolute;
                 right: 0px;
-                top: 11vh;
+                top: 12vh;
                 width: 50vw;
                 padding-top: 2%;
                 padding-bottom:2%;
