--- a/index.html
+++ b/index.html
@@ -271,7 +271,8 @@
             }
             .image-row {
                 display: flex;
-                justify-content: space-between;
+                justify-content: center;
+                align-items: center;
             }
             .TransparentBoxes{
                 background-color:rgba(120,120,120,0.2);
