--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             .icon {
                 color: #F5F5EF !important;
                 background-color: transparent;
-                margin-top: 4.4vw;
+                margin-top: 3vh;
                 margin-right: 2vw;
-                padding-left: 10%;
-                padding-right:10%;
-                padding-top:4%;
-                padding-bottom:4%;
+                padding-left: 8%;
+                padding-right:8%;
+                padding-top:3%;
+                padding-bottom:3%;
                 display: block;
                 position: absolute;
                 font-size:3.5rem;
