--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                 width:14.92vw;
             }
             .SpeechBubble{
-                left:-1%;
+                left:-2%;
                 width:16vw;
             }
             .Goggles{
@@ -274,12 +274,14 @@
                 justify-content: center;
                 align-items: center;
                 offset-anchor: right;
+                position: relative;
+                top: 2.6%;
             }
             .TransparentBoxes{
-                background-color:rgba(120,120,120,0.2);
+                background-color:rgba(150,150,150,0.15);
                 color: #fff;
                 height: 25vh;
-                width: 19vw;
+                width: 21vw;
                 position: relative;
                 margin-top: 0.1%;
                 margin-bottom: 1.1%;
@@ -288,13 +290,13 @@
                 display: inline-block;
             }
             .box1{
-                left:-10%;
+                left:-2.3%;
             }
             .box2{
-                left:-30%;
+                left:-7%;
             }
             .box3{
-                left:-50%;
+                left:-11.7%;
             }
             .TransparencyGradients{
                 background: rgb(0,0,0);
