--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@
                 top: 2.6%;
             }
             .TransparentBoxes{
-                background-color:rgba(150,150,150,0.15);
+                background-color:rgba(200,200,200,0.1);
                 color: #fff;
-                height: 25vh;
+                height: 40vh;
                 width: 21vw;
                 position: relative;
                 margin-top: 0.1%;
@@ -288,6 +288,7 @@
                 margin-left:14.33333%;
                 margin-right:0%;
                 display: inline-block;
+                z-index: 1;
             }
             .box1{
                 left:-2.3%;
@@ -302,18 +303,21 @@
                 background: rgb(0,0,0);
                 background: linear-gradient(0deg, rgba(0,0,0,0.21) 7%, rgba(0,0,0,0.14) 31%, rgba(255,255,255,0) 84%);
                 height:4vh;
-                width:15vw;
+                width:19vw;
                 position:absolute;
-                margins:0px;
+                margin-left:1%;
+                margin-right: 1%;
+                text-align: center;
+                z-index: 4;
             }
             .gradient1{
-                top:50%;
+                top:70%;
             }
             .gradient2{
-                top:50%;
+                top:70%;
             }
             .gradient3{
-                top:50%;
+                top:70%;
             }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
