--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <a href="#campaigns" style="padding-left: 12%;">Campaign</a>
             <a href="#about" style="padding-left: 12%;">About Us</a>
         </div>
-        <a href="javascript:void(0);" class="icon" /*onclick="dropdown()"*/>
+        <a href="javascript:void(0);" class="icon" tabindex="1"/*onclick="dropdown()"*/>
             <i class="fa fa-bars"></i>
         </a>
         <a href="https://li21rich.github.io/SHSEnvironmentalAction/">
@@ -424,8 +424,7 @@
                     e.preventDefault();
                 }
             }, false);
-            /*
-            function dropdown() {
+            /*function dropdown() {
                 var x = $(".LinksMenu");
                 if (x.is(":visible")) {
                     x.hide();
@@ -434,7 +433,8 @@
                     x.show();
                     $(".icon").css("background-color", "black");
                 }
-            }
+            }*/
+            /*
             function checkWindowWidth() {
                 if ($(window).width() >= 921) {
                     $(".LinksMenu").hide();
