--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
                 transition: color 0.3s;
                 margin-top: 3vh;
                 margin-right: 2vw;
-                padding-left: 8%;
-                padding-right:8%;
-                padding-top:3%;
-                padding-bottom:3%;
+                padding: 3% 6%; 
                 display: block;
                 position: absolute;
                 font-size:3.5rem;
@@ -345,7 +342,7 @@
             <a href="#campaigns" style="padding-left: 12%;">Campaign</a>
             <a href="#about" style="padding-left: 12%;">About Us</a>
         </div>
-        <a href="javascript:void(0);" class="icon" onclick="dropdown()">
+        <a href="#" class="icon" onclick="dropdown()">
             <i class="fa fa-bars"></i>
         </a>
         <a href="https://li21rich.github.io/SHSEnvironmentalAction/">
