--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                 color: #F5F5EF !important;
                 background-color: transparent;
                 transition: color 0.3s;
-                margin-top: 3vh;
+                margin-top: 3.2vh;
                 margin-right: 2vw;
-                padding: 3% 6%; 
+                padding: 10px 15px
                 display: block;
                 position: absolute;
-                font-size:3.5rem;
+                font-size:3.3rem;
                 right: 0;
                 top: 0;
                 z-index:3;
