--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 color: #F5F5EF !important;
                 background-color: transparent;
                 transition: color 0.3s;
-                margin-top: 3.2vh;
-                margin-right: 2vw;
+                margin-top: 31px;
+                margin-right: 1.9vw;
                 padding: 10px 15px
                 display: block;
                 position: absolute;
@@ -48,7 +48,8 @@
                 display: block;
                 display: none;
                 position: absolute;
-                right: 0px;
+                right:0px;
+                margin-right: 1.9vw;
                 top: 12vh;
                 width: 50vw;
                 padding-top: 2%;
@@ -101,7 +102,7 @@
             }
             .logoTextBox{
                 width: 16vw;
-                min-width: 190px;
+                min-width: 160px;
                 height: auto;
                 position:absolute;
                 z-index: 2;
