--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 color: #F5F5EF !important;
                 background-color: transparent;
                 transition: color 0.3s;
-                margin-top: 31px;
+                margin-top: 21px;
                 margin-right: 1.9vw;
-                padding: 10px 15px
+                padding: 10px 15px;
                 display: block;
                 position: absolute;
                 font-size:3.3rem;
@@ -58,7 +58,7 @@
                 font-family: Montserrat;
                 font-weight: 400;
                 line-height:1.6;
-                font-size:2rem;
+                font-size:1.7rem;
                 background-color: #2C4025;
                 color: #F5F5EF;
                 z-index: 3;
@@ -91,7 +91,7 @@
                 height: auto;
                 position:absolute;
                 z-index: 2;
-                top: clamp(20px, 1.9vw, 800px);
+                top: clamp(21px, 1.9vw, 800px);
                 left: 1.9vw;
             }
             .logoBox img{
@@ -102,11 +102,11 @@
             }
             .logoTextBox{
                 width: 16vw;
-                min-width: 160px;
+                min-width: 178px;
                 height: auto;
                 position:absolute;
                 z-index: 2;
-                top: clamp(22px, 2.85vw, 800px);
+                top: clamp(24px, 2.85vw, 800px);
                 left: clamp(133px, 10.6vw, 800px);
             }
             .logoTextBox img{
