--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 position: absolute;
                 right:0px;
                 margin-right: 1.9vw;
-                top: 12vh;
+                top: 101px;
                 width: 50vw;
                 padding-top: 2%;
                 padding-bottom:2%;
