--- a/index.html
+++ b/index.html
@@ -320,7 +320,10 @@
             }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
-                   display: none;
+                    display: none;
+                }
+                .image-row{
+                    flex-direction: row;
                 }
             }
             @media screen and (max-width: 920px) {
@@ -329,6 +332,9 @@
                 }
                 .introduction {
                     width: 100%;
+                }
+                .image-row{
+                    flex-direction: column;
                 }
             }
         </style>
