--- a/index.html
+++ b/index.html
@@ -336,6 +336,9 @@
                 .image-row{
                     flex-direction: column;
                 }
+                .rectangle{
+                    padding: 20px 0px;
+                }
             }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
