--- a/index.html
+++ b/index.html
@@ -337,7 +337,8 @@
                     flex-direction: column;
                 }
                 .rectangle{
-                    padding: 20px 0px;
+                    margin-top: 25px;
+                    margin-bottom: 15px;
                 }
             }
         </style>
