--- a/index.html
+++ b/index.html
@@ -304,8 +304,7 @@
                 height:4vh;
                 width:19vw;
                 position:absolute;
-                margin-left:1%;
-                margin-right: 1%;
+                left:1vw;
                 text-align: center;
                 z-index: 4;
             }
@@ -338,6 +337,11 @@
                 }
                 .rectangle{
                     margin-top: 25px;
+                }
+                .TransparentBoxes{
+                    width:90%;
+                    clear:both;
+                    padding-bottom:8px;
                 }
             }
         </style>
