--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                     flex-direction: column;
                 }
                 .rectangle{
-                    margin-top: 25px;
+                    top: 20px;
                 }
                 .TransparentBoxes{
                     width:90%;
