--- a/index.html
+++ b/index.html
@@ -334,6 +334,8 @@
                 }
                 .image-row{
                     flex-direction: column;
+                    justify-content: left;
+                    align-items: left;
                 }
                 .rectangle{
                     top: 20px;
@@ -342,6 +344,11 @@
                     width:90%;
                     clear:both;
                     padding-bottom:8px;
+                }
+                .TransparencyGradients{
+                    rotate: 90deg;
+                    top:0%;
+                    left:30%;
                 }
             }
         </style>
