--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
                 }
                 .image-row{
                     flex-direction: column;
-                    justify-content: left;
-                    align-items: left;
+                    justify-content: space-between;
+                    align-items: flex-start !important;
                 }
                 .rectangle{
                     top: 20px;
@@ -343,12 +343,14 @@
                 .TransparentBoxes{
                     width:90%;
                     clear:both;
-                    padding-bottom:8px;
+                    margins: 0%;
+                    margin-bottom:8px;
+                    left:7px;
                 }
                 .TransparencyGradients{
                     rotate: 90deg;
                     top:0%;
-                    left:30%;
+                    left:8%;
                 }
             }
         </style>
