--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Environmental Action</title>
         <meta charset="utf-8">'>
         <link href='https://fonts.googleapis.com/css?family=Montserrat|Montserrat:400,700' rel='stylesheet'>
-        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet>
+        <link href='https://fonts.googleapis.com/css?family=Roboto' rel="stylesheet">
         <link href="https://fonts.cdnfonts.com/css/gill-sans-mt-2" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
