--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             .box3{
                 left:-11.7%;
             }
-            Involvements{
+            Involvements {
                 top:1vh;
                 height:74%;
                 width:16.9vw;
@@ -309,6 +309,7 @@
                 z-index:3;
                 background-color: #f7fff6ff; 
                 font-family: 'Gill Sans MT', sans-serif;
+                color: black !important;
             }
             .TransparencyGradients{
                 background: rgb(0,0,0);
@@ -417,61 +418,63 @@
         <img class = "GreenElements Goggles" src = "images/tinygoggles.svg">
         <div class="image-row">
             <div class = "TransparentBoxes box1">
-                <p class = "Involvements">
-                    Our Webinars
-                    <ul>
-                      <li>Experts are invited</li>
-                      <li>Occurs every semester</li>
-                    </ul>
-                    Monthly Workshops
-                    <ul>
-                      <li>Learn environmental advocacy</li>
-                    </ul>
-                    Regular Meetings
-                    <ul>
-                      <li>Tutorial updates held up to twice a week</li>
-                    </ul>
-                </p>
+                <section class = "Involvements">
+                    <p>Our Webinars</p>
+                        <ul>
+                          <li>Experts are invited</li>
+                          <li>Occurs every semester</li>
+                        </ul>
+                    <p>Monthly Workshops</p>
+                        <ul>
+                          <li>Learn environmental advocacy</li>
+                        </ul>
+                    <p>Regular Meetings</p>
+                        <ul>
+                          <li>Tutorial updates held up to twice a week</li>
+                        </ul>
+                </section>
                 <div class = "TransparencyGradients"></div>
                 <div class = "MiniFooter"></div>
             </div>
             <div class = "TransparentBoxes box2">
-                <p class = "Involvements">
-                    Visit our <a href="https://linktr.ee/environmental_action_club">linktree</a>
+                <section class = "Involvements">
+                    <p>
+                    Visit our <a href="https://linktr.ee/environmental_action_club" style="white-space: nowrap">linktree</a>
+                    </p>
                     <ul>
-                      <li>Or <a href="https://forms.gle/LAVz8fkzZSBbcyMC8">sign up directly</a></li>
+                      <li>Or <a href="https://forms.gle/LAVz8fkzZSBbcyMC8" style="white-space: nowrap">sign up directly</a></li>
                     </ul>
-                    Questions
+                    <p>Questions</p>
                     <ul>
                       <li>
                         Email us at:
                         Saratoga.eac@gmail.com
                       </li>
                     </ul>
-                    Socials
+                    <p>Socials</p>
                     <ul>
                         <li>Facebook</li>
                         <li>Instagram</li>
                     </ul>
-                </p>
+                </section>
                 <div class = "TransparencyGradients"></div>
                 <div class = "MiniFooter"></div>
             </div>
             <div class = "TransparentBoxes box3">
-                <p class = "Involvements">
-                    Holiday Outings
+                <section class = "Involvements">
+                    <p>Holiday Outings</p>
                     <ul>
                       <li>Optional birdwatching and hiking</li>
                     </ul>
-                    Fundraising
+                    <p>Fundraising</p>
                     <ul>
                       <li>Website funding</li>
                     </ul>
-                    Public Comments
+                    <p>Public Comments</p>
                     <ul>
                       <li>Attend city council meetings</li>
                     </ul>
-                </p>
+                </section>
                 <div class = "TransparencyGradients"></div>
                 <div class = "MiniFooter"></div>
             </div>
