--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-        <link rel="icon" type="image/x-icon" href="roundbg.png">
+        <link rel="icon" type="image/png" href="roundbg.png?v=2" />
     </head>
     <body style="background-color:White;">
         <img id = "TopBanner" src="images/TopBanner.png">
