--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=1">
         <title>Environmental Action</title>
-        <meta charset="utf-8">'>
+        <meta charset="utf-8">
         <link href='https://fonts.googleapis.com/css?family=Montserrat|Montserrat:400,700' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel="stylesheet">
         <link href="https://fonts.cdnfonts.com/css/gill-sans-mt-2" rel="stylesheet">
