--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             .box3{
                 left:-11.7%;
             }
-            Involvements {
+            .Involvements {
                 top:1vh;
                 height:74%;
                 width:16.9vw;
