--- a/index.html
+++ b/index.html
@@ -357,15 +357,21 @@
                 }
                 .TransparentBoxes{
                     width:90%;
+                    left:1px;
+                    float:left;
                     clear:both;
                     margins: 0%;
                     margin-bottom:8px;
-                    left:7px;
                 }
                 .TransparencyGradients{
                     rotate: 90deg;
                     top:0%;
                     left:8%;
+                    height:5vh;
+                }
+                .Involvements{
+                    width:80%;
+                    left:5%;
                 }
             }
         </style>
