--- a/index.html
+++ b/index.html
@@ -309,7 +309,14 @@
                 z-index:3;
                 background-color: #f7fff6ff; 
                 font-family: 'Gill Sans MT', sans-serif;
-                color: black !important;
+                color: black;
+                padding-left: 6px;
+                padding-top:2px;
+                font-size: 1.8rem;
+            }
+            .Involvements a {
+                color: blue !important; /* Change the color to blue */
+                text-decoration: underline !important; /* Add underline */
             }
             .TransparencyGradients{
                 background: rgb(0,0,0);
@@ -323,8 +330,8 @@
                 top: 70%;
             }
             .MiniFooter{
-                top:74%;
-                height:25vh;
+                top:75vh;
+                height:4vh;
                 width:16.9vw;
                 left:1vw;
                 position:absolute;
@@ -426,16 +433,16 @@
             <div class = "TransparentBoxes box1">
                 <section class = "Involvements">
                     <p>Our Webinars</p>
-                        <ul>
+                        <ul style = "font-size: 1rem;">
                           <li>Experts are invited</li>
                           <li>Occurs every semester</li>
                         </ul>
                     <p>Monthly Workshops</p>
-                        <ul>
+                        <ul style = "font-size: 1rem;">
                           <li>Learn environmental advocacy</li>
                         </ul>
                     <p>Regular Meetings</p>
-                        <ul>
+                        <ul style = "font-size: 1rem;">
                           <li>Tutorial updates held up to twice a week</li>
                         </ul>
                 </section>
@@ -445,20 +452,20 @@
             <div class = "TransparentBoxes box2">
                 <section class = "Involvements">
                     <p>
-                    Visit our <a href="https://linktr.ee/environmental_action_club" style="white-space: nowrap">linktree</a>
+                    Visit our <a href="https://linktr.ee/environmental_action_club" style="display: inline;">linktree</a>
                     </p>
-                    <ul>
-                      <li>Or <a href="https://forms.gle/LAVz8fkzZSBbcyMC8" style="white-space: nowrap">sign up directly</a></li>
+                    <ul style = "font-size: 1rem;">
+                      <li>Or <a href="https://forms.gle/LAVz8fkzZSBbcyMC8" style="display: inline;">sign up directly</a></li>
                     </ul>
                     <p>Questions</p>
-                    <ul>
+                    <ul style = "font-size: 1rem;">
                       <li>
                         Email us at:
                         Saratoga.eac@gmail.com
                       </li>
                     </ul>
                     <p>Socials</p>
-                    <ul>
+                    <ul style = "font-size: 1rem; display: inline;">
                         <li>Facebook</li>
                         <li>Instagram</li>
                     </ul>
@@ -469,15 +476,15 @@
             <div class = "TransparentBoxes box3">
                 <section class = "Involvements">
                     <p>Holiday Outings</p>
-                    <ul>
+                    <ul style = "font-size: 1rem;">
                       <li>Optional birdwatching and hiking</li>
                     </ul>
                     <p>Fundraising</p>
-                    <ul>
+                    <ul style = "font-size: 1rem;">
                       <li>Website funding</li>
                     </ul>
                     <p>Public Comments</p>
-                    <ul>
+                    <ul style = "font-size: 1rem;">
                       <li>Attend city council meetings</li>
                     </ul>
                 </section>
