--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@
                 left:-11.7%;
             }
             .Involvements {
-                top:1vh;
-                height:74%;
-                width:16.9vw;
-                left:1vw;
+                top: 13px;
+                height:93%;
+                width:calc(21vw-26px);
+                left:13px;
                 position:absolute;
                 text-align:left;
                 z-index:3;
@@ -313,6 +313,8 @@
                 padding-left: 6px;
                 padding-top:2px;
                 font-size: 1.8rem;
+                line-height:0.9;
+                margins: 0px;
             }
             .Involvements a {
                 color: blue !important; /* Change the color to blue */
@@ -321,22 +323,22 @@
             .TransparencyGradients{
                 background: rgb(0,0,0);
                 background: linear-gradient(0deg, rgba(0,0,0,0.21) 7%, rgba(0,0,0,0.14) 31%, rgba(255,255,255,0) 84%);
-                height:4vh;
-                width:16.9vw;
+                height:6vh;
+                width:calc(21vw-26px);
                 position:absolute;
                 left:1vw;
                 text-align: center;
                 z-index: 4;
-                top: 70%;
+                top: 71%;
             }
             .MiniFooter{
-                top:75vh;
+                top:86%;
                 height:4vh;
-                width:16.9vw;
+                width:calc(21vw-26px);
                 left:1vw;
                 position:absolute;
                 text-align:center;
-                z-index:4;
+                z-index:3;
                 background-color: #3f5e31ff; 
             }
             @media screen and (min-width: 921px) {
