--- a/index.html
+++ b/index.html
@@ -316,9 +316,9 @@
                 line-height:0.9;
                 margins: 0px;
             }
-            .Involvements a {
-                color: blue !important; /* Change the color to blue */
-                text-decoration: underline !important; /* Add underline */
+            .Involvements p a, .Involvements ul a {
+                color: blue !important;
+                text-decoration: underline !important;
             }
             .TransparencyGradients{
                 background: rgb(0,0,0);
