--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 top: 0;
                 z-index:3;
             }
-            a:-webkit-any-link:not(.icon, .Involvements) {
+            a:-webkit-any-link:not(.icon):not(.Involvements) {
                 color: inherit !important;
                 text-decoration: none !important;
                 display: inherit;
@@ -312,8 +312,8 @@
                 color: black;
                 padding-left: 6px;
                 padding-top:2px;
-                font-size: 1.8rem;
-                line-height:0.9;
+                font-size: 1.33rem;
+                line-height:0.8;
                 margins: 0px;
             }
             .Involvements p a, .Involvements ul a {
